# unhtml.rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: nightly-test.yml  release.yml  stable-test.yml
derive_test/: Cargo.toml
derive_test/src/: lib.rs
derive_test/src/test/: mod.rs
src/: lib.rs  text.rs
src/html/: compound.rs  foo.rs  mod.rs  root_selector.rs
unhtml/: Cargo.toml  README.md
unhtml/derive-tests/: html.rs  text.rs
unhtml/src/: err.rs  implement.rs  lib.rs  polyfill.rs  traits.rs  util.rs
unhtml/src/test/: from_html.rs  from_text.rs  mod.rs  vec_from_html.rs
unhtml/tests/: lib.rs
unhtml/tests/test/: mod.rs
unhtml_derive/: Cargo.toml  README.md
unhtml_derive/src/: attr_meta.rs  derive.rs  derives.rs  html.rs  implement.rs  lib.rs  parse.rs  text.rs
unhtml_derive/src/test/: mod.rs
unhtml_derive/tests/: lib.rs
unhtml_derive/tests/test/: documentation.rs  mod.rs
unhtml_derive/tests_obsolete/: lib.rs
unhtml_derive/tests_obsolete/test/: mod.rs
unhtml_test/: Cargo.toml
unhtml_test/src/: lib.rs
unhtml_test/src/test/: mod.rs
unhtml_util/: Cargo.toml
unhtml_util/src/: err.rs  lib.rs  traits.rs  utils.rs
unhtml_util/src/test/: mod.rs  vec_from_html.rs
