[package]
name = "unhtml"
version = "0.7.2"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A magic html parser"
repository = "https://github.com/Hexilee/unhtml.rs"
keywords = ["unhtml", "html", "parser"]
categories = ["parser-implementations", "web-programming", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/unhtml"

[dependencies]
scraper = "0.10"
derive_more = "0.15"
unhtml_derive = { path = "../unhtml_derive", version = "0.7", optional = true }

[features]
derive = ["unhtml_derive"]

[badges]
travis-ci = { repository = "Hexilee/unhtml.rs", branch = "master" }
