[package]
name = "unhtml_derive"
version = "0.3.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc macro derive for unhtml"
repository = "https://github.com/Hexilee/unhtml.rs"
keywords = ["unhtml", "html", "deserializor", "derive"]
categories = ["encoding"]
readme = "README.md"
documentation = "https://docs.rs/unhtml_derive"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.22"
quote = "0.6.10"
proc-macro2 = "0.4.24"
synstructure = "0.10.1"
unhtml = { path = "../unhtml", version = "0.2.0" }

[badges]
travis-ci = { repository = "Hexilee/unhtml.rs", branch = "master" }