[package]
name = "unhtml_derive"
version = "0.7.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc macro derive for unhtml"
repository = "https://github.com/Hexilee/unhtml.rs"
keywords = ["unhtml", "html", "parser", "derive"]
categories = ["parser-implementations", "web-programming", "encoding"]
readme = "README.md"
documentation = "https://docs.rs/unhtml_derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
scraper = "0.10"

[badges]
travis-ci = { repository = "Hexilee/unhtml.rs", branch = "master" }
