[package]
name = "unhtml_util"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "some utility traits and functions for unhtml"
repository = "https://github.com/Hexilee/runhtml"
keywords = ["runhtml", "html"]
categories = ["deserializer"]

[dependencies]
cssparser = "0.25.1"
selectors = "0.20.0"
scraper = "0.8.1"
failure = "0.1.3"
failure_derive = "0.1.3"
ego-tree = "0.5.0"